@@ -1,6 +1,5 @@
     package com.gradation.zmnnoory.domain.video.service;
 
-    import com.gradation.zmnnoory.domain.member.entity.Member;
     import com.gradation.zmnnoory.domain.participation.entity.Participation;
     import com.gradation.zmnnoory.domain.video.dto.request.Base64ImageRequest;
     import com.gradation.zmnnoory.domain.video.dto.response.VideoDetailResponse;
@@ -15,7 +14,6 @@
     import org.springframework.transaction.annotation.Transactional;
 
     import java.util.List;
-    import java.util.stream.Collectors;
 
     @Slf4j
     @Service
@@ -57,13 +55,12 @@
         }
 
 
-        // 3. 현재 맴버의 모든 비디오 조회
+        // 3. 멤버의 업로드 완료된 비디오 목록 조회
         @Transactional(readOnly = true)
-        public List<VideoSummaryResponse> getVideosByMember(Member member) {
-            List<Video> videos = videoRepository.findAllByParticipation_Member(member);
-            return videos.stream()
+        public List<VideoSummaryResponse> getUploadedVideosByMember(Long memberId) {
+            return videoRepository.findByParticipationMemberIdAndVideoUrlIsNotNull(memberId).stream()
                     .map(VideoSummaryResponse::from)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         // 4. 공개된 전체 영상 리스트 조회
@@ -85,5 +82,10 @@
             Long gameId = participation.getGame().getId();
 
             videoImageUploadService.uploadBase64Images(userId, gameId, images);
+        }
+
+
+        public void deleteVideo(Participation participation) {
+            videoRepository.deleteByParticipation(participation);
         }
     }
